[workspace]
members = [
    "socket_tcp_protocol",
    "socket_tcp_server",
    "socket_tcp_client",
    "socket_udp_client",
    "socket_udp_server",
    "socket_udp_protocol",
    "socket_tcp_async_server",
    "socket_tcp_async_client",
    "socket_udp_async_server",
    "socket_udp_async_client",
]
resolver = "2"